--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "coreshop/resource-bundle": "^3.0",
     "coreshop/money-bundle": "^3.0",
     "coreshop/currency-bundle": "^3.0",
-    "pimcore/pimcore": "^10.4 || ^11.0"
+    "pimcore/pimcore": "^10.4"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.5.4",
