--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "extra": {
-
+    "branch-alias": {
+      "dev-master": "3.0-dev"
+    }
   },
   "config": {
     "sort-packages": true
